add_custom_target(all_tests)

function(nmm_add_test name)
    add_executable(test_${name} src/${name}.c src/cartes.c)
    add_dependencies(all_tests test_${name})
    target_link_libraries(test_${name} PRIVATE NMM::nmm)
    target_compile_options(test_${name} PRIVATE ${WARNING_FLAGS})
    add_test(NAME ${name} COMMAND test_${name})
endfunction()

nmm_add_test(amino_abc)
nmm_add_test(amino_table)
nmm_add_test(base_abc)
nmm_add_test(base_table)
nmm_add_test(codon)
nmm_add_test(codon_lprob)
nmm_add_test(codon_state)
nmm_add_test(codon_table)
nmm_add_test(frame_state)
nmm_add_test(hmm)
nmm_add_test(hmm_io)
nmm_add_test(perf)
